[package]
name = "session-service"
authors = ["smokingplaya"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
lazy_static = "1.5.0"
log = "0.4.22"
mc-query = "2.0.0"
num-bigint = "0.4.6"
once_cell = "1.20.2"
openssl = "0.10.68"
serde_json = "1.0.137"
sha1 = "0.10.6"

[dependencies.axum]
version = "0.8.1"
features = ["multipart"]

[dependencies.reqwest]
version = "0.12.12"
features = ["json"]

[dependencies.dixxxie]
version = "0.1.15"
git="https://github.com/riverfallmc/dixxxie"

[dependencies.tokio]
version = "1.42.0"
features = ["full"]

[dependencies.chrono]
version = "0.4.39"
features = ["serde"]

[dependencies.serde]
version = "1.0.217"
features = ["derive"]

[dependencies.diesel]
version = "2.2.0"
features = ["postgres", "r2d2", "chrono", "serde_json"]
